--- a/HelloWorld/app/src/main/AndroidManifest.xml
+++ b/HelloWorld/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zero.project.helloworld">
+          package="com.zero.project.helloworld">
 
     <application
         android:allowBackup="true"
@@ -9,24 +9,30 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN"/>-->
+            <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
         </activity>
 
         <receiver android:name=".receiver.MyReceiver">
             <intent-filter>
-                <action android:name="com.zero.project.CUSTOM_EVENT" />
+                <action android:name="com.zero.project.CUSTOM_EVENT"/>
             </intent-filter>
         </receiver>
 
         <provider
             android:name=".provider.StudentProvider"
-            android:authorities="com.zero.provider.college" />
+            android:authorities="com.zero.provider.college"/>
 
-        <service android:name=".service.MyService" />
+        <service android:name=".service.MyService"/>
 
+        <activity android:name=".IntentActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
