Adding Display activity from fragment

--- a/HelloWorld/app/src/main/AndroidManifest.xml
+++ b/HelloWorld/app/src/main/AndroidManifest.xml
@@ -31,11 +31,13 @@
         <service android:name=".service.MyService"/>
 
         <activity android:name=".IntentActivity">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN"/>-->
 
-            <!--<category android:name="android.intent.category.LAUNCHER"/>-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN"/> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity android:name=".FragmentLayout">
             <intent-filter>
@@ -43,6 +45,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".DisplayMessage">
         </activity>
     </application>
 
